<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        style="@style/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:text="@string/home" />
    
    <Button
        android:id="@+id/feedspeed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedspeed"/>
    
    <Button
        android:id="@+id/decimalcalc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fracToDec"/>
    
    <Button
        android:id="@+id/drilltap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/drilltap"/>

</LinearLayout>