<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FeedSpeed" >
    

	
    <TextView
        android:id="@+id/feedTitle"
        style="@style/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/feed"/>
    <TextView
        android:id="@+id/fsRange"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""/>
    
    <EditText
        style="@style/fstext"
        android:id="@+id/feedText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:onClick="onClick"
		android:clickable="true"
        android:hint="@string/enterFeed"/>
    
	<TextView
	    android:id="@+id/speedTitle"
	    style="@style/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/speed"/>
	
    <EditText 
        android:id="@+id/speedText"
        style="@style/fstext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:onClick="onClick"
		android:clickable="true"
        android:hint="@string/enterSpeed"/>
    <Button
        android:id="@+id/go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/go"
        />
</LinearLayout>